@@ -188,6 +188,12 @@ minimizes boolean functions; written in C++; runs on Linux, Solaris, Win32.
 an Ada 95 data logging and interactive review and playback tool.
 </ul>
 
+<ul>
+<li><a href="http://casa.in-berlin.de/gnome-ior.xml">GNOME-IOR</a> -
+parses and displays CORBA object references, with ping-like features to check
+if objects are alive (used libglade).
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
