@@ -1,3 +1,7 @@
+2004-04-11  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added GNOME-IOR.
+
 2004-03-23  Damon Chaplin  <damon@gnome.org>
 
 	* download.html:
